--- a/docs/技术栈.md
+++ b/docs/技术栈.md
@@ -4,10 +4,10 @@
 
 ### 前端框架
 
-- **Next.js 15.3.2** - React 全栈框架，App Router 架构
-- **React 19.1.0** - 用户界面库，支持服务器组件
-- **TypeScript 5.8.3** - 类型安全的 JavaScript 超集
-- **Tailwind CSS 4.1.7** - 原子化 CSS 框架（CSS-first 配置）
+- **Next.js 15.3.8** - React 全栈框架，App Router 架构
+- **React 19.2.3** - 用户界面库，支持服务器组件
+- **TypeScript 5.9.3** - 类型安全的 JavaScript 超集
+- **Tailwind CSS 4.1.18** - 原子化 CSS 框架（CSS-first 配置）
 
 ### 渲染策略
 
@@ -18,8 +18,8 @@
 ### 部署平台
 
 - **Cloudflare Workers** - 边缘计算运行时
-- **@opennextjs/cloudflare 1.0.4** - Next.js Cloudflare 适配器
-- **Wrangler 4.16.1** - Cloudflare CLI 工具
+- **@opennextjs/cloudflare 1.14.5** - Next.js Cloudflare 适配器
+- **Wrangler 4.54.0** - Cloudflare CLI 工具
 
 ## 2. 内容管理系统
 
@@ -31,9 +31,9 @@
 - **gray-matter 4.0.3** - Front Matter 解析
 - **@types/mdx 2.0.13** - MDX 类型定义
 
-### 目录结构
+### 内容目录
 
-```
+```text
 src/content/
 ├── en/blog/        # 英文博客内容
 ├── zh/blog/        # 中文博客内容
@@ -110,19 +110,19 @@ src/content/
 
 ### 代码质量
 
-- **eslint 9.27.0** - 代码质量检查（Flat Config）
+- **eslint 9.39.1** - 代码质量检查（Flat Config）
   - @eslint/eslintrc 3.3.1 - ESLint 配置兼容层
   - @eslint/js 9.27.0 - ESLint JavaScript 配置
 - **typescript-eslint 8.32.1** - TypeScript 专用规则
-- **@eslint-react/eslint-plugin 1.49.0** - React 组件规则
-- **eslint-plugin-react-hooks 6.0.0-rc.1** - React Hooks 最佳实践
+- **@eslint-react/eslint-plugin 2.3.13** - React 组件规则
+- **eslint-plugin-react-hooks 5.2.0** - React Hooks 最佳实践
 - **eslint-plugin-react-you-might-not-need-an-effect 0.7.0** - useEffect 优化
 - **@next/eslint-plugin-next 15.3.2** - Next.js 专用规则
 - **eslint-plugin-import-x 4.13.0** - 导入语句规则
 - **eslint-plugin-jsx-a11y 6.10.2** - 无障碍性规则
 - **eslint-config-prettier 10.1.5** - Prettier 冲突解决
 - **eslint-plugin-security 3.0.1** - 安全规则检查
-- **eslint-plugin-unicorn 59.0.1** - 代码风格最佳实践
+- **eslint-plugin-unicorn 62.0.0** - 代码风格最佳实践
 - **eslint-plugin-n 17.18.0** - Node.js 规则
 - **eslint-plugin-drizzle 0.2.3** - Drizzle ORM 规则
 - **eslint-config-next 15.3.2** - Next.js ESLint 配置预设
@@ -148,9 +148,9 @@ src/content/
 
 ### Git 工作流
 
-- **lefthook 1.11.13** - Git hooks 管理
-- **@commitlint/cli 19.8.1** - 提交信息规范
-- **@commitlint/config-conventional 19.8.1** - 约定式提交
+- **lefthook 2.0.9** - Git hooks 管理
+- **@commitlint/cli 20.2.0** - 提交信息规范
+- **@commitlint/config-conventional 20.2.0** - 约定式提交
 - **commitizen 4.3.1** - 交互式提交
 - **@changesets/cli 2.29.4** - 版本管理
 
@@ -182,16 +182,17 @@ src/content/
 
 ### 单元测试
 
-- **vitest 3.2.4** - 现代化测试框架
-- **@vitest/browser 3.2.4** - 浏览器测试
-- **@vitejs/plugin-react 4.5.0** - React 支持
-- **vitest-browser-react 0.1.1** - React 浏览器测试工具
+- **vitest 4.0.15** - 现代化测试框架
+- **@vitest/browser 4.0.15** - 浏览器测试
+- **@vitest/browser-playwright 4.0.15** - Playwright 浏览器 provider
+- **@vitejs/plugin-react 4.7.0** - React 支持
+- **vitest-browser-react 2.0.8** - React 浏览器测试工具（v2 async API）
 - **vite-tsconfig-paths 5.1.4** - 路径别名支持
 
 ### 端到端测试
 
-- **@playwright/test 1.52.0** - 端到端测试框架
-- **playwright 1.52.0** - Playwright 核心库
+- **@playwright/test 1.57.0** - 端到端测试框架
+- **playwright 1.57.0** - Playwright 核心库
 
 ### Playwright 配置
 
@@ -234,9 +235,9 @@ src/content/
 
 ## 9. 项目架构
 
-### 目录结构
+### 项目目录
 
-```
+```text
 src/
 ├── app/[locale]/       # Next.js 15 App Router + 国际化
 │   ├── page.tsx       # 首页
